# crypto-analytics

./: pyproject.toml
docs/: robo_cripto.py
src/: aula1.py
