[tool.poetry]
name = "crypto-analytics"
version = "0.1.0"
description = "Análise de criptomoedas"
authors = ["matheusmafraoandrade <matheusmafrabh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
